--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "fff7cc20-6caa-4697-a237-1a4e44512a63"
 authors = ["Conrad Wiebe"]
 version = "1.0.0-DEV"
 
+[deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+
 [compat]
 julia = "1.9"
 
